--- a/test/probando.html
+++ b/test/probando.html
@@ -1,250 +1,247 @@
 <html lang="es">
-
-<head>
-    <meta charset="utf-8" />
-    <link href="./../estilos/oscuro.css" id="style" rel="stylesheet" />
-    <script src="./../main.js">
-    </script>
-</head>
-
-<body>
-    <div class="setter" id="id1">
-        <button onclick="setStyles()">
-            Cambiar
-        </button>
-    </div>
-    <h1>
-        Titulo de tema
-    </h1>
-    <div class="tema2" id="Tema de prueba">
-        <h2>
-            Tema de prueba
-        </h2>
-        <p>
-            Esta sería la explicación y demas parla introductoria
-        </p>
-        <p>
-            Algo importante es tener en cuenta las siguientes recomendaciones:
-        </p>
-        <ul>
-            <li>
-                Recomendación 1
-            </li>
-            <li>
-                Recomendación 2
-            </li>
-        </ul>
-    </div>
-    <div class="cornell" id="id2">
-        <p class="ask">
-            Esto es una pregunta
-        </p>
-        <hr />
-        <div class="rta" id="id1">
-            Yonny es mkaaaaaaaaaaaa
-        </div>
-    </div>
-    <div class="tema1" id="Otro tema">
-        <h1>
-            Otro tema
-        </h1>
-        <table>
-            <tr>
-                <th>
-                    Col 1
-                </th>
-                <th>
-                    Col 2
-                </th>
-            </tr>
-            <tr>
-                <td>
-                    Front
-                </td>
-                <td>
-                    Back
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    Papaya
-                </td>
-                <td>
-                    Aguacate
-                </td>
-            </tr>
-        </table>
-    </div>
+ <head>
+  <meta charset="utf-8"/>
+  <link href="./../estilos/oscuro.css" id="style" rel="stylesheet"/>
+  <script src="./../main.js">
+  </script>
+ </head>
+ <body>
+  <div class="setter" id="id1">
+   <button onclick="setStyles()">
+    Cambiar
+   </button>
+  </div>
+  <h1>
+   Titulo de tema
+  </h1>
+  <div class="tema2" id="Tema de prueba">
+   <h2>
+    Tema de prueba
+   </h2>
+   <p>
+    Esta sería la explicación y demas parla introductoria
+   </p>
+   <p>
+    Algo importante es tener en cuenta las siguientes recomendaciones:
+   </p>
+   <ul>
+    <li>
+     Recomendación 1
+    </li>
+    <li>
+     Recomendación 2
+    </li>
+   </ul>
+  </div>
+  <div class="cornell" id="id2">
+   <p class="ask">
+    Esto es una pregunta
+   </p>
+   <hr/>
+   <div class="rta" id="id1">
+    Esta la respuesta
+   </div>
+  </div>
+  <div class="tema1" id="Otro tema">
+   <h1>
+    Titulo de la tabla
+   </h1>
+   <table>
+    <tr>
+     <th>
+      Col 1
+     </th>
+     <th>
+      Col 2
+     </th>
+    </tr>
+    <tr>
+     <td>
+      Front
+     </td>
+     <td>
+      Back
+     </td>
+    </tr>
+    <tr>
+     <td>
+      Preguntas
+     </td>
+     <td>
+      respuesta
+     </td>
+    </tr>
+   </table>
+  </div>
+  <div class="setter" id="id1">
+   <button onclick="setStyles()">
+    Cambiar
+   </button>
+  </div>
+  <h1>
+   a
+  </h1>
+  <div class="tema" id="Seducción Textual">
+   <h2>
+    Lista especial
+   </h2>
+   <p>
+    Este es un parrafo introductorio:
+   </p>
+   <ul>
+    <li>
+     <a href="#Despertar emociones">
+      Primera Recomendación
+     </a>
+    </li>
+    <li>
+     <a href="#Crear Conexiones">
+      Segunda
+     </a>
+    </li>
+    <li>
+     <a href="#Manejar la logistica">
+      Me debes una salida :p
+     </a>
+    </li>
+   </ul>
+  </div>
+  <div class="tema3" id="Despertar emociones">
+   <h3>
+    Cubriendo textos
+   </h3>
+   <p>
+    Y también tiene la opción de
+    <strong>
+     Cubrir la respuesta
+    </strong>
+   </p>
+   <p>
+    La mejor forma de cubrir textos es
+    <a href="./libro-seduccion.html/#flirtreo">
+     así
+    </a>
+    aun habiendo texto del otro lado
+   </p>
+   <div class="tema4" id="Sobresalir con mis palabras">
+    <h4>
+     Sobresalir con mis palabras
+    </h4>
     <p>
-        Y también tiene la opción de
-        <strong>
-            Cubrir la respuesta
-        </strong>
+     Unas preguntas que ayudan para considerar si las palabras que uso son correctas son:
     </p>
-    <div class="setter" id="id1">
-        <button onclick="setStyles()">
-            Cambiar
-        </button>
-    </div>
-    <h1>
-        Seducción textual
-    </h1>
-    <div class="tema" id="Seducción Textual">
-        <h2>
-            Seducción Textual
-        </h2>
-        <p>
-            Posee 3 ingredientes:
-        </p>
-        <ul>
-            <li>
-                <a href="#Despertar emociones">
-                    Despertar emociones
-                </a>
-            </li>
-            <li>
-                <a href="#Crear Conexiones">
-                    Crear Conexiones
-                </a>
-            </li>
-            <li>
-                <a href="#Manejar la logistica">
-                    manejar la logística
-                </a>
-            </li>
-        </ul>
-    </div>
-    <div class="tema3" id="Despertar emociones">
-        <h3>
-            Despertar emociones
-        </h3>
-        <p>
-            La mejor forma de despertar emociones es con humor y con
-            <a href="./libro-seduccion.html/#flirtreo">
-                flirtreo
-            </a>
-            y
-            otros ingredientes:
-        </p>
-        <div class="tema4" id="Sobresalir con mis palabras">
-            <h4>
-                Sobresalir con mis palabras
-            </h4>
-            <p>
-                Unas preguntas que ayudan para considerar si las palabras que uso son correctas son:
-            </p>
-            <ul>
-                <li>
-                    Que hay de nuevo sobre lo que estoy escribiendo?
-                </li>
-                <li>
-                    Ella entenderá facilmente lo que quiero decir?
-                </li>
-                <li>
-                    Esto suena como algo que otro hombre le escribiría?
-                </li>
-                <li>
-                    Que imágenes mentales generan mis palabras?
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    Reemplazar palabras por simbolos. Ej:
-                    <del>
-                        Nuestro encuentro de anoche fue increible
-                    </del>
-                    Nuestro encuentro de anoche = increible
-                </li>
-                <li>
-                    Comenzar con verbos o exclamaciones de una palabra. Ej: ¡Cielo!
-                </li>
-                <li>
-                    Comenzar con drama: Ej: Te odio, se terminó etc.
+    <ul>
+     <li>
+      Que hay de nuevo sobre lo que estoy escribiendo?
+     </li>
+     <li>
+      Ella entenderá facilmente lo que quiero decir?
+     </li>
+     <li>
+      Esto suena como algo que otro hombre le escribiría?
+     </li>
+     <li>
+      Que imágenes mentales generan mis palabras?
+     </li>
+    </ul>
+    <ul>
+     <li>
+      Reemplazar palabras por simbolos. Ej:
+      <del>
+       Nuestro encuentro de anoche fue increible
+      </del>
+      Nuestro encuentro de anoche = increible
+     </li>
+     <li>
+      Comenzar con verbos o exclamaciones de una palabra. Ej: ¡Cielo!
+     </li>
+     <li>
+      Comenzar con drama: Ej: Te odio, se terminó etc.
                     NOTA: Luego enviar un mensaje que aclare que no la odias etc.
-                </li>
-                <li>
-                    Agregar frases graciosas a oraciones simples: Ej: Recién me comí un omelette
-                    <strong>
-                        hecho por la mano de Dios
-                    </strong>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="tema3" id="Crear Conexiones">
-        <h3>
-            Crear Conexiones
-        </h3>
-        <p>
-            Tener una conexión con una chica acerca
+     </li>
+     <li>
+      Agregar frases graciosas a oraciones simples: Ej: Recién me comí un omelette
+      <strong>
+       hecho por la mano de Dios
+      </strong>
+     </li>
+    </ul>
+   </div>
+  </div>
+  <div class="tema3" id="Crear Conexiones">
+   <h3>
+    Crear Conexiones
+   </h3>
+   <p>
+    Tener una conexión con una chica acerca
             de algo, ya sea un interés común, un chiste interno, un apodo, o incluso algo que
             tú imagines es lo que mantiene una buena interacción
-        </p>
-        <p>
-            esforzarte demasiado para establecer conexiones con una mujer puede
+   </p>
+   <p>
+    esforzarte demasiado para establecer conexiones con una mujer puede
             arruinar tus chances. Solo querrás tener una fina capa de conexión lo suficiente
             para mantener la unidad. Las conexiones reales no se forman por WhatsApp; se
             hacen en persona.
-        </p>
-        <p>
-            Es importante ser curioso con la chica, por eso hay que hacer 2 cosas:
-        </p>
-        <div class="tema4" id="Hacer bromas internas específicas">
-            <h4>
-                Hacer bromas internas específicas
-            </h4>
-            <p>
-                En una ocasión, le dije a una chica: “Soy adicto total a los mensajes” mientras le
+   </p>
+   <p>
+    Es importante ser curioso con la chica, por eso hay que hacer 2 cosas:
+   </p>
+   <div class="tema4" id="Hacer bromas internas específicas">
+    <h4>
+     Hacer bromas internas específicas
+    </h4>
+    <p>
+     En una ocasión, le dije a una chica: “Soy adicto total a los mensajes” mientras le
                 pedía el número. Entonces, de acuerdo con eso, el primer mensaje que le envié
                 fue, “estoy satisfaciendo mi adicción a los mensajes solo por ti.” Inmediatamente
                 ese mensaje le hizo recordar cuánto se divirtió conmigo, y nos conectó aún más
-            </p>
-        </div>
-        <div class="tema4" id="Hacer preguntas específicas internas">
-            <h3>
-                Hacer preguntas específicas internas
-            </h3>
-            <p>
-                Para esto es bueno agregar el por qué a la pregunta. Ej:
-                <del>
-                    De donde eres?
-                </del>
-                De donde eres? Tu acento suena interesante
-            </p>
-        </div>
-    </div>
-    <div class="tema3" id="Manejar la logística">
-        <h3>
-            Manejar la logística
-        </h3>
-        <ul>
-            <li>
-                significa establecer
+    </p>
+   </div>
+   <div class="tema4" id="Hacer preguntas específicas internas">
+    <h3>
+     Hacer preguntas específicas internas
+    </h3>
+    <p>
+     Para esto es bueno agregar el por qué a la pregunta. Ej:
+     <del>
+      De donde eres?
+     </del>
+     De donde eres? Tu acento suena interesante
+    </p>
+   </div>
+  </div>
+  <div class="tema3" id="Manejar la logística">
+   <h3>
+    Manejar la logística
+   </h3>
+   <ul>
+    <li>
+     significa establecer
                 un horario para el encuentro, evadir las excusas, y asegurarte de que todo esté en
                 orden para que cuando se encuentren cara a cara, ella esté aún más emocionada
                 de verte que la última vez que la viste en persona.
-            </li>
-            <li>
-                La mayoría de los hombres cometen ese error de tener conversaciones
+    </li>
+    <li>
+     La mayoría de los hombres cometen ese error de tener conversaciones
                 interminables, el problema de esto es que tarde o temprano, llegará un momento
                 de monotonía, en el cual la chica se terminará aburriendo.
-            </li>
-            <li>
-                La mayoría de los hombres piensan que solo
+    </li>
+    <li>
+     La mayoría de los hombres piensan que solo
                 deben pedir un encuentro o una cita cuando están casi seguros de que ella dirá
                 “si”. ¡Esa es una actitud equivocada!
-            </li>
-        </ul>
-    </div>
-    <div class="tema2" id="El primer mensaje">
-        <h2>
-            El primer mensaje
-        </h2>
-        <p>
-            CAP 2 LEER
-        </p>
-    </div>
-    <div class="tema2" id="Cumplidos">
+    </li>
+   </ul>
+  </div>
+  <div class="tema2" id="El primer mensaje">
+   <h2>
+    El primer mensaje
+   </h2>
+   <p>
+    CAP 2 LEER
+   </p>
+  </div>
+  <!-- <div class="tema2" id="Cumplidos">
         <h2>
             Cumplidos
         </h2>
@@ -360,16 +357,15 @@
                 NOTA: Ella no va a recordar todas mis buenas cualidades,so debo recordarselas
             </p>
         </ul>
-    </div>
-    <div class="tema2" id="Recomendaciones">
-        <h2>
-            Recomendaciones
-        </h2>
-        <p>
-        </p>
-    </div>
-</body>
-
+    </div> -->
+  <div class="tema2" id="Recomendaciones">
+   <h2>
+    Recomendaciones
+   </h2>
+   <p>
+   </p>
+  </div>
+ </body>
 </html>
 <script defer="" src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?skin=desert">
 </script>
