--- a/ECDI/preguntas.html
+++ b/ECDI/preguntas.html
@@ -1,20 +1,29 @@
 <html lang="es">
-    <head>
-        <meta charset="UTF-8"/>
-        <link id="style" rel="stylesheet" href="./../estilos/oscuro.css" />
-<script src="./../main.js"></script>
-    </head>
-    <body>
-        <div class="setter">
-            <button onclick="setStyles()">Cambiar</button>
-        </div>
-        <h1>Preguntas</h1>
-        <div class="cornell">
-             <p class="ask">Preguntas</p>
-            <hr/>
-            <div class="rta">Respuetas</div>
-        </div>
-
-    </body>
+ <head>
+  <meta charset="utf-8"/>
+  <link href="./../estilos/oscuro.css" id="style" rel="stylesheet"/>
+  <script src="./../main.js">
+  </script>
+ </head>
+ <body>
+  <div class="setter">
+   <button onclick="setStyles()">
+    Cambiar
+   </button>
+  </div>
+  <h1>
+   Preguntas
+  </h1>
+  <div class="cornell" id="id1">
+   <p class="ask">
+    Preguntas
+   </p>
+   <hr/>
+   <div class="rta">
+    Respuetas
+   </div>
+  </div>
+ </body>
 </html>
-<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?skin=desert" defer=""/>
+<script defer="" src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?skin=desert">
+</script>
