--- a/CVDS/index.html
+++ b/CVDS/index.html
@@ -4,29 +4,29 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>
-   Document
+   CVDS
   </title>
   <link href="./../index.css" id="style" media="screen" rel="stylesheet" type="text/css"/>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
  </head>
  <body>
-    <h1 id="Materia">Materia</h1>
+    <h1 id="Materia">CVDS</h1>
     <p>
-        <strong>Profesor: </strong> Arnoldo
+        <strong>Profesor: </strong> Ivan
     </p>
     <p>
         <strong>Correo:</strong> @escuelaing.edu.co
     </p>
     <p>
-        <strong>Ciclo:</strong> 2022-2
+        <strong>Ciclo:</strong> 2022-2  
     </p>
 
 
 
     <a href="preguntas.html"> ❓ Preguntas</a>
     <div class="wrapper">
-        <a href="example.html">
-         example.html
+        <a href="clase-1.html">
+         Clase 1
         </a>
        </div>
 
