--- a/ECDI/preguntas.html
+++ b/ECDI/preguntas.html
@@ -16,12 +16,17 @@
   </h1>
   <div class="cornell" id="id1">
    <p class="ask">
-    Preguntas
+    No entendí cuando una función es lineal
    </p>
    <hr/>
    <div class="rta">
     Respuetas
    </div>
+  </div>
+  <div class="cornell">
+     <p class="ask">DAD</p>
+    <hr/>
+    <div class="rta"></div>
   </div>
  </body>
 </html>
