--- a/ECDI/index.html
+++ b/ECDI/index.html
@@ -25,8 +25,8 @@
 
     <a href="preguntas.html"> ❓ Preguntas</a>
     <div class="wrapper">
-        <a href="example.html">
-         example.html
+        <a href="1-1 definiciones.html">
+         1.1 definiciones
         </a>
        </div>
 
