--- a/CNYT/index.html
+++ b/CNYT/index.html
@@ -25,8 +25,8 @@
 
     <a href="preguntas.html"> ❓ Preguntas</a>
     <div class="wrapper">
-        <a href="example.html">
-         example.html
+        <a href="lecturaw1.html">
+         lecturaw1
         </a>
        </div>
 
