--- a/CNYT/index.html
+++ b/CNYT/index.html
@@ -12,10 +12,10 @@
  <body>
     <h1 id="Materia">Materia</h1>
     <p>
-        <strong>Profesor: </strong> Arnoldo
+        <strong>Profesor: </strong> Luis Benavides
     </p>
     <p>
-        <strong>Correo:</strong> @escuelaing.edu.co
+        <strong>Correo:</strong> luis.benavides@escuelaing.edu.co
     </p>
     <p>
         <strong>Ciclo:</strong> 2022-2
@@ -28,6 +28,7 @@
         <a href="lecturaw1.html">
          lecturaw1
         </a>
+        <a href="contexto.html">contexto</a>
        </div>
 
 
@@ -35,30 +36,15 @@
         <div>
             <h3>🎯 Calificaciones</h3>
             <div class="calificaciones">
-                <ul>
-                    <li>Parcial 50%</li>
-                    <li>Talleres 20%</li>
-                    <li>Quices 30%</li>
-                </ul>
-                <ul>
-                    <li>Parcial 50%</li>
-                    <li>Talleres 20%</li>
-                    <li>Quices 30%</li>
-                </ul>
-                <ul>
-                    <li>Parcial 50%</li>
-                    <li>Talleres 20%</li>
-                    <li>Quices 30%</li>
-                </ul>
+                <img src="./OTROS/calificaciones.png" alt="">
             </div>
             <hr>
             <ul>
-                <li>El parcial es en parejas</li>
             </ul>
         </div>
         <div style="text-align:center;">
             <h3 id="Meta">Meta</h3>
-            <p>Quiero... para poder... cuando</p>
+            <p>Quiero estudiar CNYT para poder tener una materia medianamente suave en este pesado semestre</p>
         </div>
     </div>
 
