--- a/CVDS/index.html
+++ b/CVDS/index.html
@@ -12,7 +12,7 @@
  <body>
     <h1 id="Materia">CVDS</h1>
     <p>
-        <strong>Profesor: </strong> Ivan
+        <strong>Profesor: </strong> Ivan visaus
     </p>
     <p>
         <strong>Correo:</strong> @escuelaing.edu.co
@@ -58,7 +58,8 @@
         </div>
         <div style="text-align:center;">
             <h3 id="Meta">Meta</h3>
-            <p>Quiero... para poder... cuando</p>
+            <p>Quiero estudiar CVDS para poder tener un mejor desarrollo de codigo, y conocer
+                un monton de cosas que probablemente me puedan servir a la hora de llevar a cabo </p>
         </div>
     </div>
 
