--- a/ECDI/index.html
+++ b/ECDI/index.html
@@ -12,10 +12,10 @@
  <body>
     <h1 id="Materia">Materia</h1>
     <p>
-        <strong>Profesor: </strong> Arnoldo
+        <strong>Profesor: </strong> Lida buitrago
     </p>
     <p>
-        <strong>Correo:</strong> @escuelaing.edu.co
+        <strong>Correo:</strong> lida.buitrado@escuelaing.edu.co
     </p>
     <p>
         <strong>Ciclo:</strong> 2022-2
@@ -35,21 +35,7 @@
         <div>
             <h3>🎯 Calificaciones</h3>
             <div class="calificaciones">
-                <ul>
-                    <li>Parcial 50%</li>
-                    <li>Talleres 20%</li>
-                    <li>Quices 30%</li>
-                </ul>
-                <ul>
-                    <li>Parcial 50%</li>
-                    <li>Talleres 20%</li>
-                    <li>Quices 30%</li>
-                </ul>
-                <ul>
-                    <li>Parcial 50%</li>
-                    <li>Talleres 20%</li>
-                    <li>Quices 30%</li>
-                </ul>
+            <img src="./OTROS/calificaciones.png" alt="">
             </div>
             <hr>
             <ul>
@@ -58,9 +44,13 @@
         </div>
         <div style="text-align:center;">
             <h3 id="Meta">Meta</h3>
-            <p>Quiero... para poder... cuando</p>
+            <p>Quiero estudiar ECDI para poder hacer uso de la app de apuntes y verificar que todo
+                es funcional
+            </p>
         </div>
+        
     </div>
+    <iframe src="./OTROS/Información_general_y_día_día.pdf" style="width:100%; height: 1000px" frameborder="0"></iframe>
 
 
 
