--- a/ECDI/preguntas.html
+++ b/ECDI/preguntas.html
@@ -16,17 +16,11 @@
   </h1>
   <div class="cornell" id="id1">
    <p class="ask">
-    No entendí cuando una función es lineal
+    Cuando a uno lepiden el dominio de una función es la intersección del dominio de la solución?
    </p>
    <hr/>
    <div class="rta">
-    Respuetas
    </div>
-  </div>
-  <div class="cornell">
-     <p class="ask">DAD</p>
-    <hr/>
-    <div class="rta"></div>
   </div>
  </body>
 </html>
