--- a/RECO/index.html
+++ b/RECO/index.html
@@ -12,10 +12,10 @@
  <body>
     <h1 id="Materia">Materia</h1>
     <p>
-        <strong>Profesor: </strong> Arnoldo
+        <strong>Profesor: </strong> Claudia patricia Santiago cely
     </p>
     <p>
-        <strong>Correo:</strong> @escuelaing.edu.co
+        <strong>Correo:</strong> claudia.santiago@escuelaing.edu.co
     </p>
     <p>
         <strong>Ciclo:</strong> 2022-2
@@ -24,9 +24,10 @@
 
     <a href="preguntas.html"> ❓ Preguntas</a>
     <div class="wrapper">
-        <a href="example.html">
-         example.html
+        <a href="historia-internet.html">
+         historia internet
         </a>
+        <a href="redes.html">redes</a>
        </div>
 
 
