--- a/RECO/preguntas.html
+++ b/RECO/preguntas.html
@@ -16,12 +16,26 @@
   </h1>
   <div class="cornell" id="id1">
    <p class="ask">
-    Preguntas
+    Que pasaría si uno se conectara directamente a una WAN o algo asi?
    </p>
    <hr/>
    <div class="rta">
     Respuetas
    </div>
+  </div>
+
+  <div class="cornell">
+     <p class="ask">"Mantiene la conexión de extremo a extremo, la inicia y la cierra", si la capa de transporte estableció
+        Conexión NOAC, la cierra en ambos lados o como funciona?
+     </p>
+    <hr/>
+    <div class="rta"></div>
+  </div>
+
+  <div class="cornell">
+     <p class="ask">Capa de transporte. Cual es la diferencia entre control de flujo y control de congestión?</p>
+    <hr/>
+    <div class="rta"></div>
   </div>
  </body>
 </html>
