--- a/CVDS/index.html
+++ b/CVDS/index.html
@@ -28,7 +28,19 @@
         <a href="clase-1.html">
          Clase 1
         </a>
+        <a href="control-versiones.html.">
+            control versiones
+        </a>
+        <a href="./patrones-diseno.html">
+            Patrones de diseño
+        </a>
+        <a href="./maven.html">Maven</a>
        </div>
+
+       <blockquote>
+        Lo que te llevó de cero a cien no de te lelvará de 100 a 1000
+        <p>Freddy vega</p>
+       </blockquote>
 
 
     <div class="info"> 
