--- a/ECDI/index.html
+++ b/ECDI/index.html
@@ -4,13 +4,13 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>
-   Document
+   ECDI
   </title>
   <link href="./../index.css" id="style" media="screen" rel="stylesheet" type="text/css"/>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
  </head>
  <body>
-    <h1 id="Materia">Materia</h1>
+    <h1 id="Materia">ECDI</h1>
     <p>
         <strong>Profesor: </strong> Lida buitrago
     </p>
@@ -27,6 +27,9 @@
     <div class="wrapper">
         <a href="1-1 definiciones.html">
          1.1 definiciones
+        </a>
+        <a href="1-2 problemas.html"> 
+            1.2 problemas
         </a>
        </div>
 
