--- a/ECDI/preguntas.html
+++ b/ECDI/preguntas.html
@@ -14,13 +14,20 @@
   <h1>
    Preguntas
   </h1>
-  <div class="cornell" id="id1">
-   <p class="ask">
-    Cuando a uno lepiden el dominio de una función es la intersección del dominio de la solución?
-   </p>
+
+  <div class="cornell">
+    <p class="ask">No entendí la diferencia en los intervalos cuando se habla de función, Solución de una ED y de
+      una solución del problema con valores iniciales (foto)
+    </p>
    <hr/>
-   <div class="rta">
-   </div>
+   <div class="rta"></div>
+   <img src="./OTROS/duda-intervalos.png" alt="">
+  </div>
+
+  <div class="cornell">
+    <p class="ask">DAD 16, 20</p>
+   <hr/>
+   <div class="rta"></div>
   </div>
  </body>
 </html>
