--- a/EGI3/index.html
+++ b/EGI3/index.html
@@ -28,6 +28,8 @@
         <a href="example.html">
          example.html
         </a>
+        <a href="./conditionals.html">conditionals</a>
+        <a href="./rules.html">rules</a>
        </div>
 
 
