--- a/RECO/historia-internet.html
+++ b/RECO/historia-internet.html
@@ -12,18 +12,23 @@
         <div id="Comienzo" class="tema2">
             <h2>Comienzo</h2>
             <p>El internet nació a finales de la guerra fría</p>
-            <p>Luego surgió <a href="#ARPANET">ARPANET ~~1960</a> </p>
+            <p>Luego surgió <a href="#ARPANET">ARPANET 1969</a> </p>
         <p>Creció muy rapido y quedó obsoleto, por lo que se crearon los protocolos TCP/IP</p>
         <p>Luego empezó a llegar las paginas web y todo ese tema</p>
+        <p>En los 70's pa delante empezaron a popularizarse el correo, pero a USA ya no le convenía,
+            por lo que se retiró y se emepezó a trabajar en internet </p>
         </div>
 
         <div id="ARPANET" class="tema3">
             <h3>ARPANET</h3>
             <p>Fue una red de computadoras usada para enviar datos militares</p>
-            <p>Se quería que fuese capaz de resistir un bloque nuclear</p>
+            <p>Se quería que fuese capaz de resistir un bloque nuclear (querían que no les tumbaran
+                los traductores)
+            </p>
             <p>Fue construido por muchas universidades y entidades gubernamentales, pero estas solo
                 estuvieron al inicio
             </p>
+            <p>Las universidades fueron: Stanford, UCLA, la Universidad de Utah y la Universidad de California en Santa Bárbara.</p>
             <p>Al inicio contaba con 4 nodos, pero poco a poco fue expandiendose</p>
             <p>Se privatizó y se transfirió a un <a href="#ISP">ISP</a></p>
             
@@ -33,10 +38,27 @@
 
         <div id="ISP" class="tema4">
             <h4>ISP</h4>
-            <p>Proveedor de servicios de internet (Claro, tigo...)</p>
+
+            <p>Proveedor de servicios de internet</p>
+            <p>Pueden ser servicicos fisicos (Claro, tigo etc) o logicos (netflix y similares. Buscan
+                Brindar servicios con la nube)</p>
             <strong>Netflix y similares tambien lo son porque prestan servicios a traves de internet</strong>
             <p>Uno puede conectarse a varios ISP del mismo nivel, quienes tambien pueden estar conectados a varios ISP de otros niveles</p>
+            <p>Para enviar mensajes entre personas (nacional), se envía al ISP fisico, y este se conecta a NAC y pasa el
+                msg al otro Proveedor
+            </p>
+            <p><strong>NAC</strong>: Network access control</p>
+            <p>Su estructura consiste en subdivisiones:</p>
+            <ul>
+                <li>ISP Local: Proporciona a los usuarios el servicio mas directo. Esta se conecta directamente 
+                    a la Regional.
+                </li>
+                <li>ISP regional: Proporciona acceso a la red a los ISP locales</li>
+                <li>ISP Principal (backbone): Es la ISP mas importante. Unos ejemplos son: UUNet, british Telecom, OVH etc. Todas estas son empresas de telecomunicaciones</li>
+            </ul>
         </div>        
+
+
 
 
         
