--- a/RECO/index.html
+++ b/RECO/index.html
@@ -28,7 +28,9 @@
          historia internet
         </a>
         <a href="redes.html">redes</a>
+        <a href="capas.html">capas</a>
        </div>
+
 
 
     <div class="info"> 
@@ -61,6 +63,9 @@
             <p>Quiero... para poder... cuando</p>
         </div>
     </div>
+
+    <iframe src="./OTROS/Taller1.pdf" style="width:100%; height: 1000px" frameborder="0"></iframe>
+    <iframe src="./OTROS/Resumen capa aplicación.pdf" style="width:100%; height: 1000px" frameborder="0"></iframe>
 
 
 
