--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         RECO
        </a>
          <a href="EGI3/index.html">
-        Finanzas
+        EGI3
 
    <a href="TEMPLATE/index.html">
     TEMPLATE
