--- a/ECDI/1-1 definiciones.html
+++ b/ECDI/1-1 definiciones.html
@@ -13,7 +13,7 @@
             <p class="ask">Ec Diferencial</p>
            <hr/>
            <div class="rta">Ec que contiene las derivadas de una o mas funciones desconocidas ( vars dependientes)
-                respecto a una o mas vars dependientes
+                respecto a una o mas vars independientes
            </div>
        </div>
 
