--- a/ECDI/1-2 problemas.html
+++ b/ECDI/1-2 problemas.html
@@ -24,11 +24,11 @@
                 <div class="rta">Condiciones iniciales: Son las constantes</div>
             </div>
 
-            
             </div>
 
             <div id="Tma Existencia & unicidad" class="tema2">
                 <h2>Tma Existencia & unicidad</h2>
+                <p>Solo aplica con PVI</p>
                 <p>Si:</p>
                 <ul>
                     <li>ED Orden 1 (almenos por ahora)</li>
