--- a/RECO/capas.html
+++ b/RECO/capas.html
@@ -15,7 +15,6 @@
                 <li>Permiten reducir complejidad, ya que cada capa tiene su función definida</li>
                 <li>Cada una tiene un <a href="#PDU">PDU</a></li>
             </ul>
-            
         </div>
         <div id="OSI y TCP/IP" class="tema2">
             <h2>OSI y TCP/IP</h2>
@@ -65,7 +64,7 @@
                 <td>
                     <ul>
                         <li>Controla el funcionamiento de la subred</li>
-                        <li>Facturación a los usuarios de los gatos gastados por ejemplo</li>
+                        <li>Facturación a los usuarios de los datos gastados por ejemplo</li>
                         <li>Manejo de rutas REVISAR</li>
                         <li>Control de congestión (OSI)</li>
                         <li>Solución de problemas de red</li>
