--- a/RECO/index.html
+++ b/RECO/index.html
@@ -29,6 +29,7 @@
         </a>
         <a href="redes.html">redes</a>
         <a href="capas.html">capas</a>
+        <a href="./resumen 1T.html">Resumen 1T</a>
        </div>
 
 
