--- a/ECDI/index.html
+++ b/ECDI/index.html
@@ -31,6 +31,11 @@
         <a href="1-2 problemas.html"> 
             1.2 problemas
         </a>
+        <a href="./1-3 ED como modelos M.html">1.3 ED como modelos matemáticos</a>
+        <a href="./2-1 curvas solucion.html">2-1 curvas solucion</a>
+        <a href="./resumen c1.html">Resumen Cap 1</a>
+        <a href="./2-2+ Solucion ED.html">Soluciones a ED</a>
+        <a href="./DAD"></a>
        </div>
 
 
