--- a/RECO/preguntas.html
+++ b/RECO/preguntas.html
@@ -20,14 +20,9 @@
         Conexión NOAC, la cierra en ambos lados o como funciona?
      </p>
     <hr/>
-    <div class="rta"></div>
+    <div class="rta">Simplemente no la cierra</div>
   </div>
 
-  <div class="cornell">
-     <p class="ask">Capa de transporte. Cual es la diferencia entre control de flujo y control de congestión?</p>
-    <hr/>
-    <div class="rta"></div>
-  </div>
  </body>
 </html>
 <script defer="" src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?skin=desert">
