--- a/RECO/index.html
+++ b/RECO/index.html
@@ -30,6 +30,9 @@
         <a href="redes.html">redes</a>
         <a href="capas.html">capas</a>
         <a href="./resumen 1T.html">Resumen 1T</a>
+        <a href="./capa-aplicacion.html">capa aplicacion</a>
+        <a href="./capa-fisica.html">capa fisica</a>
+        <a href="./capa-enlace.html">capa enlace</a>
        </div>
 
 
