--- a/RECO/resumen 1T.html
+++ b/RECO/resumen 1T.html
@@ -56,7 +56,7 @@
             <div class="rta">
                 <p>Conjunto de reglas</p>
                 <ul>
-                    <li>IETF: Genera los estandares de internet. Generan request for comments (RFC)</li>
+                    <li>IETF: Genera los estandares de internet. Generan request for comments (RFC: Documentos con recomendaciones)</li>
                     <li>JURE. Promovidas por organizaciones como ISO, IEEE, IETF etc</li>
                     <li>FACTO. Promovidos por entes o grupos de personas, es un "estandar informal".</li>
                 </ul>
