cambio git ignore

--- a/CNYT/index.html
+++ b/CNYT/index.html
@@ -10,46 +10,25 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
  </head>
  <body>
-    <h1 id="Materia">Materia</h1>
-    <p>
-        <strong>Profesor: </strong> Luis Benavides
-    </p>
-    <p>
-        <strong>Correo:</strong> luis.benavides@escuelaing.edu.co
-    </p>
-    <p>
-        <strong>Ciclo:</strong> 2022-2
-    </p>
-
-
-
-    <a href="preguntas.html"> ❓ Preguntas</a>
-    <div class="wrapper">
-        <a href="lecturaw1.html">
-         lecturaw1
-        </a>
-        <a href="contexto.html">contexto</a>
-        <a href="./complexVectorSpaces.html"> Espacio de vectores complejos</a>
-       </div>
-
-
-    <div class="info"> 
-        <div>
-            <h3>🎯 Calificaciones</h3>
-            <div class="calificaciones">
-                <img src="./OTROS/calificaciones.png" alt="">
-            </div>
-            <hr>
-            <ul>
-            </ul>
-        </div>
-        <div style="text-align:center;">
-            <h3 id="Meta">Meta</h3>
-            <p>Quiero estudiar CNYT para poder tener una materia medianamente suave en este pesado semestre</p>
-        </div>
-    </div>
-
-
-
+  <div class="wrapper">
+   <a href="cap-4.html">
+    cap-4.html
+   </a>
+   <a href="complexVectorSpaces.html">
+    complexVectorSpaces.html
+   </a>
+   <a href="contexto.html">
+    contexto.html
+   </a>
+   <a href="lecturaw1.html">
+    lecturaw1.html
+   </a>
+   <a href="preguntas.html">
+    preguntas.html
+   </a>
+   <a href="Referencia">
+    Referencia
+   </a>
+  </div>
  </body>
 </html>
