ajustes para automatizacion de apuntes

--- a/CNYT/index.html
+++ b/CNYT/index.html
@@ -23,8 +23,8 @@
 
 
 
-    <a href="preguntas.html"> ❓ Preguntas</a>
-    <div class="wrapper">
+    <a href="preguntas.html"> Preguntas</a>
+    <div class="wrapper menu">
         <a href="lecturaw1.html">
          lecturaw1
         </a>
@@ -35,7 +35,7 @@
 
     <div class="info"> 
         <div>
-            <h3>🎯 Calificaciones</h3>
+            <h3>Calificaciones</h3>
             <div class="calificaciones">
                 <img src="./OTROS/calificaciones.png" alt="">
             </div>
