--- a/ECDI/index.html
+++ b/ECDI/index.html
@@ -23,8 +23,8 @@
 
 
 
-    <a href="preguntas.html"> ❓ Preguntas</a>
-    <div class="wrapper">
+    <a href="preguntas.html"> Preguntas</a>
+    <div class="wrapper menu">
         <a href="./resumen c1.html">Resumen Cap 1</a>
         <a href="./resumen c2.html">Resumen Cap 2</a>
         <a href="1-1 definiciones.html">
@@ -44,7 +44,7 @@
 
     <div class="info"> 
         <div>
-            <h3>🎯 Calificaciones</h3>
+            <h3>Calificaciones</h3>
             <div class="calificaciones">
             <img src="./OTROS/calificaciones.png" alt="">
             </div>
