--- a/RECO/index.html
+++ b/RECO/index.html
@@ -22,8 +22,8 @@
     </p>
 
 
-    <a href="preguntas.html"> ❓ Preguntas</a>
-    <div class="wrapper">
+    <a href="preguntas.html"> Preguntas</a>
+    <div class="wrapper menu">
         <a href="historia-internet.html">
          historia internet
         </a>
@@ -39,7 +39,7 @@
 
     <div class="info"> 
         <div>
-            <h3>🎯 Calificaciones</h3>
+            <h3>Calificaciones</h3>
             <div class="calificaciones">
                 <ul>
                     <li>Parcial 50%</li>
