--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="index.css" id="style" media="screen" rel="stylesheet" type="text/css"/>
  </head>
  <body>
-  <div class="wrapper">
+  <div class="wrapper menu">
     <a href="CNYT/index.html">
         CNYT
        </a>
