--- a/FINANZAS/index.html
+++ b/FINANZAS/index.html
@@ -23,8 +23,8 @@
 
 
 
-    <a href="preguntas.html"> ❓ Preguntas</a>
-    <div class="wrapper">
+    <a href="preguntas.html"> Preguntas</a>
+    <div class="wrapper menu">
         <a href="example.html">
          example.html
         </a>
@@ -33,7 +33,7 @@
 
     <div class="info"> 
         <div>
-            <h3>🎯 Calificaciones</h3>
+            <h3>Calificaciones</h3>
             <div class="calificaciones">
                 <ul>
                     <li>Parcial 50%</li>
