--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
  </head>
  <body>
-  <div class="wrapper">
+  <div class="wrapper menu">
    <a href="as-is-to-be.html">
     as-is-to-be.html
    </a>
