--- a/CVDS/Integracion-continua.html
+++ b/CVDS/Integracion-continua.html
@@ -21,7 +21,7 @@
   </h1>
   <br/>
   <p>
-   Practica en la que los miembros de un equipo  integran su trabajo alemnos una vez por día
+   Practica en la que los miembros de un equipo  integran su trabajo alemnos una vez por dï¿½a
   </p>
   <br/>
   <br/>
@@ -88,12 +88,12 @@
     DevOps
    </h2>
    <p>
-    Conjunto de filosofias, practicas y herramientas que aumentan la capacidad de una organización apra entregar aplicaciones de forma veloz, como Amazon web service
+    Conjunto de filosofias, practicas y herramientas que aumentan la capacidad de una organizaciï¿½n apra entregar aplicaciones de forma veloz, como Amazon web service
    </p>
   </div>
   <div class="tema2" id="IT AS A SERVICE: ">
    <h2>
-    IT AS A SERVICE:
+IT AS A SERVICE:
    </h2>
    <p>
     Servicios que escalan automaticamente a medida que se incrementa la demanda, usa servicios en la nube y se cobra por la cantidad de recursos usados
@@ -101,6 +101,7 @@
    <p>
     Hay varias formas de implementarlo
    </p>
+   <img src="./OTROS/DEVOPS.png" alt="">
   </div>
   <p>
   </p>
