--- a/CVDS/index.html
+++ b/CVDS/index.html
@@ -47,6 +47,9 @@
    <a href="imdepancia.html">
     imdepancia.html
    </a>
+   <a href="Integracion-continua.html">
+    Integracion-continua.html
+   </a>
    <a href="inyeccion-dependencias.html">
     inyeccion-dependencias.html
    </a>
@@ -68,13 +71,10 @@
    <a href="resumen-t1.html">
     resumen-t1.html
    </a>
-   <a href="SPOOL">
-    SPOOL
-   </a>
   </div>
-<<<<<<< HEAD
+  &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 =======
-<<<<<<< HEAD
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 =======
   <blockquote>
    Lo que te llevó de cero a cien no de te lelvará de 100 a 1000
@@ -139,7 +139,7 @@
     </p>
    </div>
   </div>
->>>>>>> 66616854
->>>>>>> d603d3731dab8b4f73455d3984e2684cd672e47e
+  &gt;&gt;&gt;&gt;&gt;&gt;&gt; 66616854
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; d603d3731dab8b4f73455d3984e2684cd672e47e
  </body>
 </html>
