--- a/FINANZAS/index.html
+++ b/FINANZAS/index.html
@@ -10,59 +10,93 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
  </head>
  <body>
-    <h1 id="Materia">Materia</h1>
-    <p>
-        <strong>Profesor: </strong> Arnoldo
-    </p>
-    <p>
-        <strong>Correo:</strong> @escuelaing.edu.co
-    </p>
-    <p>
-        <strong>Ciclo:</strong> 2022-2
-    </p>
-
-
-
-    <a href="preguntas.html"> Preguntas</a>
-    <div class="wrapper menu">
-        <a href="example.html">
-         example.html
-        </a>
-       </div>
-
-
-    <div class="info"> 
-        <div>
-            <h3>Calificaciones</h3>
-            <div class="calificaciones">
-                <ul>
-                    <li>Parcial 50%</li>
-                    <li>Talleres 20%</li>
-                    <li>Quices 30%</li>
-                </ul>
-                <ul>
-                    <li>Parcial 50%</li>
-                    <li>Talleres 20%</li>
-                    <li>Quices 30%</li>
-                </ul>
-                <ul>
-                    <li>Parcial 50%</li>
-                    <li>Talleres 20%</li>
-                    <li>Quices 30%</li>
-                </ul>
-            </div>
-            <hr>
-            <ul>
-                <li>El parcial es en parejas</li>
-            </ul>
-        </div>
-        <div style="text-align:center;">
-            <h3 id="Meta">Meta</h3>
-            <p>Quiero... para poder... cuando</p>
-        </div>
+  <h1 id="Materia">
+   Materia
+  </h1>
+  <p>
+   <strong>
+    Profesor:
+   </strong>
+   Arnoldo
+  </p>
+  <p>
+   <strong>
+    Correo:
+   </strong>
+   @escuelaing.edu.co
+  </p>
+  <p>
+   <strong>
+    Ciclo:
+   </strong>
+   2022-2
+  </p>
+  <a href="preguntas.html">
+   Preguntas
+  </a>
+  <div class="wrapper menu">
+   <a href="example.html">
+    example.html
+   </a>
+   <a href="preguntas.html">
+    preguntas.html
+   </a>
+  </div>
+  <div class="info">
+   <div>
+    <h3>
+     Calificaciones
+    </h3>
+    <div class="calificaciones">
+     <ul>
+      <li>
+       Parcial 50%
+      </li>
+      <li>
+       Talleres 20%
+      </li>
+      <li>
+       Quices 30%
+      </li>
+     </ul>
+     <ul>
+      <li>
+       Parcial 50%
+      </li>
+      <li>
+       Talleres 20%
+      </li>
+      <li>
+       Quices 30%
+      </li>
+     </ul>
+     <ul>
+      <li>
+       Parcial 50%
+      </li>
+      <li>
+       Talleres 20%
+      </li>
+      <li>
+       Quices 30%
+      </li>
+     </ul>
     </div>
-
-
-
+    <hr/>
+    <ul>
+     <li>
+      El parcial es en parejas
+     </li>
+    </ul>
+   </div>
+   <div style="text-align:center;">
+    <h3 id="Meta">
+     Meta
+    </h3>
+    <p>
+     Quiero... para poder... cuando
+    </p>
+   </div>
+  </div>
  </body>
 </html>
