--- a/RECO/index.html
+++ b/RECO/index.html
@@ -10,8 +10,31 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
  </head>
  <body>
-<<<<<<< HEAD
-  <div class="wrapper">
+  <h1 id="Materia">
+   Materia
+  </h1>
+  <p>
+   <strong>
+    Profesor:
+   </strong>
+   Claudia patricia Santiago cely
+  </p>
+  <p>
+   <strong>
+    Correo:
+   </strong>
+   claudia.santiago@escuelaing.edu.co
+  </p>
+  <p>
+   <strong>
+    Ciclo:
+   </strong>
+   2022-2
+  </p>
+  <a href="preguntas.html">
+   Preguntas
+  </a>
+  <div class="wrapper menu">
    <a href="capa-aplicacion.html">
     capa-aplicacion.html
    </a>
@@ -42,74 +65,66 @@
    <a href="resumen-1T.html">
     resumen-1T.html
    </a>
-   <a href="SPOOL">
-    SPOOL
-   </a>
   </div>
-=======
-    <h1 id="Materia">Materia</h1>
-    <p>
-        <strong>Profesor: </strong> Claudia patricia Santiago cely
-    </p>
-    <p>
-        <strong>Correo:</strong> claudia.santiago@escuelaing.edu.co
-    </p>
-    <p>
-        <strong>Ciclo:</strong> 2022-2
-    </p>
-
-
-    <a href="preguntas.html"> Preguntas</a>
-    <div class="wrapper menu">
-        <a href="historia-internet.html">
-         historia internet
-        </a>
-        <a href="redes.html">redes</a>
-        <a href="capas.html">capas</a>
-        <a href="./resumen 1T.html">Resumen 1T</a>
-        <a href="./capa-aplicacion.html">capa aplicacion</a>
-        <a href="./capa-fisica.html">capa fisica</a>
-        <a href="./capa-enlace.html">capa enlace</a>
-       </div>
-
-
-
-    <div class="info"> 
-        <div>
-            <h3>Calificaciones</h3>
-            <div class="calificaciones">
-                <ul>
-                    <li>Parcial 50%</li>
-                    <li>Talleres 20%</li>
-                    <li>Quices 30%</li>
-                </ul>
-                <ul>
-                    <li>Parcial 50%</li>
-                    <li>Talleres 20%</li>
-                    <li>Quices 30%</li>
-                </ul>
-                <ul>
-                    <li>Parcial 50%</li>
-                    <li>Talleres 20%</li>
-                    <li>Quices 30%</li>
-                </ul>
-            </div>
-            <hr>
-            <ul>
-                <li>El parcial es en parejas</li>
-            </ul>
-        </div>
-        <div style="text-align:center;">
-            <h3 id="Meta">Meta</h3>
-            <p>Quiero... para poder... cuando</p>
-        </div>
+  <div class="info">
+   <div>
+    <h3>
+     Calificaciones
+    </h3>
+    <div class="calificaciones">
+     <ul>
+      <li>
+       Parcial 50%
+      </li>
+      <li>
+       Talleres 20%
+      </li>
+      <li>
+       Quices 30%
+      </li>
+     </ul>
+     <ul>
+      <li>
+       Parcial 50%
+      </li>
+      <li>
+       Talleres 20%
+      </li>
+      <li>
+       Quices 30%
+      </li>
+     </ul>
+     <ul>
+      <li>
+       Parcial 50%
+      </li>
+      <li>
+       Talleres 20%
+      </li>
+      <li>
+       Quices 30%
+      </li>
+     </ul>
     </div>
-
-    <iframe src="./OTROS/Taller1.pdf" style="width:100%; height: 1000px" frameborder="0"></iframe>
-    <iframe src="./OTROS/Resumen capa aplicación.pdf" style="width:100%; height: 1000px" frameborder="0"></iframe>
-
-
-
->>>>>>> d603d3731dab8b4f73455d3984e2684cd672e47e
+    <hr/>
+    <ul>
+     <li>
+      El parcial es en parejas
+     </li>
+    </ul>
+   </div>
+   <div style="text-align:center;">
+    <h3 id="Meta">
+     Meta
+    </h3>
+    <p>
+     Quiero... para poder... cuando
+    </p>
+   </div>
+  </div>
+  <iframe frameborder="0" src="./OTROS/Taller1.pdf" style="width:100%; height: 1000px">
+  </iframe>
+  <iframe frameborder="0" src="./OTROS/Resumen capa aplicación.pdf" style="width:100%; height: 1000px">
+  </iframe>
  </body>
 </html>
