--- a/ECDI/index.html
+++ b/ECDI/index.html
@@ -10,31 +10,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
  </head>
  <body>
-  <h1 id="Materia">
-   ECDI
-  </h1>
-  <p>
-   <strong>
-    Profesor:
-   </strong>
-   Lida buitrago
-  </p>
-  <p>
-   <strong>
-    Correo:
-   </strong>
-   lida.buitrado@escuelaing.edu.co
-  </p>
-  <p>
-   <strong>
-    Ciclo:
-   </strong>
-   2022-2
-  </p>
-  <a href="preguntas.html">
-   Preguntas
-  </a>
-  <div class="wrapper menu">
+  <div class="wrapper">
    <a href="1-1-definiciones.html">
     1-1-definiciones.html
    </a>
@@ -65,36 +41,12 @@
    <a href="resumen-c4.html">
     resumen-c4.html
    </a>
+   <a href="SPOOL">
+    SPOOL
+   </a>
    <a href="wolfram.html">
     wolfram.html
    </a>
   </div>
-  <div class="info">
-   <div>
-    <h3>
-     Calificaciones
-    </h3>
-    <div class="calificaciones">
-     <img alt="" src="./OTROS/calificaciones.png"/>
-    </div>
-    <hr/>
-    <ul>
-     <li>
-      El parcial es en parejas
-     </li>
-    </ul>
-   </div>
-   <div style="text-align:center;">
-    <h3 id="Meta">
-     Meta
-    </h3>
-    <p>
-     Quiero estudiar ECDI para poder hacer uso de la app de apuntes y verificar que todo
-                es funcional
-    </p>
-   </div>
-  </div>
-  <iframe frameborder="0" src="./OTROS/Información_general_y_día_día.pdf" style="width:100%; height: 1000px">
-  </iframe>
  </body>
 </html>
