--- a/CVDS/index.html
+++ b/CVDS/index.html
@@ -10,31 +10,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
  </head>
  <body>
-  <h1 id="Materia">
-   CVDS
-  </h1>
-  <p>
-   <strong>
-    Profesor:
-   </strong>
-   Ivan visaus
-  </p>
-  <p>
-   <strong>
-    Correo:
-   </strong>
-   @escuelaing.edu.co
-  </p>
-  <p>
-   <strong>
-    Ciclo:
-   </strong>
-   2022-2
-  </p>
-  <a href="preguntas.html">
-   Preguntas
-  </a>
-  <div class="wrapper menu">
+  <div class="wrapper">
    <a href="clase-1.html">
     clase-1.html
    </a>
@@ -71,75 +47,9 @@
    <a href="resumen-t1.html">
     resumen-t1.html
    </a>
+   <a href="SPOOL">
+    SPOOL
+   </a>
   </div>
-  &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
-=======
-&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
-=======
-  <blockquote>
-   Lo que te llevó de cero a cien no de te lelvará de 100 a 1000
-   <p>
-    Freddy vega
-   </p>
-  </blockquote>
-  <div class="info">
-   <div>
-    <h3>
-     Calificaciones
-    </h3>
-    <div class="calificaciones">
-     <ul>
-      <li>
-       Parcial 50%
-      </li>
-      <li>
-       Talleres 20%
-      </li>
-      <li>
-       Quices 30%
-      </li>
-     </ul>
-     <ul>
-      <li>
-       Parcial 50%
-      </li>
-      <li>
-       Talleres 20%
-      </li>
-      <li>
-       Quices 30%
-      </li>
-     </ul>
-     <ul>
-      <li>
-       Parcial 50%
-      </li>
-      <li>
-       Talleres 20%
-      </li>
-      <li>
-       Quices 30%
-      </li>
-     </ul>
-    </div>
-    <hr/>
-    <ul>
-     <li>
-      El parcial es en parejas
-     </li>
-    </ul>
-   </div>
-   <div style="text-align:center;">
-    <h3 id="Meta">
-     Meta
-    </h3>
-    <p>
-     Quiero estudiar CVDS para poder tener un mejor desarrollo de codigo, y conocer
-                un monton de cosas que probablemente me puedan servir a la hora de llevar a cabo
-    </p>
-   </div>
-  </div>
-  &gt;&gt;&gt;&gt;&gt;&gt;&gt; 66616854
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; d603d3731dab8b4f73455d3984e2684cd672e47e
  </body>
 </html>
