--- a/RECO/index.html
+++ b/RECO/index.html
@@ -4,37 +4,13 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>
-   Document
+   RECO
   </title>
   <link href="./../index.css" id="style" media="screen" rel="stylesheet" type="text/css"/>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
  </head>
  <body>
-  <h1 id="Materia">
-   Materia
-  </h1>
-  <p>
-   <strong>
-    Profesor:
-   </strong>
-   Claudia patricia Santiago cely
-  </p>
-  <p>
-   <strong>
-    Correo:
-   </strong>
-   claudia.santiago@escuelaing.edu.co
-  </p>
-  <p>
-   <strong>
-    Ciclo:
-   </strong>
-   2022-2
-  </p>
-  <a href="preguntas.html">
-   Preguntas
-  </a>
-  <div class="wrapper menu">
+  <div class="wrapper">
    <a href="capa-aplicacion.html">
     capa-aplicacion.html
    </a>
@@ -65,73 +41,9 @@
    <a href="resumen-1T.html">
     resumen-1T.html
    </a>
+   <a href="SPOOL">
+    SPOOL
+   </a>
   </div>
-  <div class="info">
-   <div>
-    <h3>
-     Calificaciones
-    </h3>
-    <div class="calificaciones">
-     <ul>
-      <li>
-       Parcial 50%
-      </li>
-      <li>
-       Talleres 20%
-      </li>
-      <li>
-       Quices 30%
-      </li>
-     </ul>
-     <ul>
-      <li>
-       Parcial 50%
-      </li>
-      <li>
-       Talleres 20%
-      </li>
-      <li>
-       Quices 30%
-      </li>
-     </ul>
-     <ul>
-      <li>
-       Parcial 50%
-      </li>
-      <li>
-       Talleres 20%
-      </li>
-      <li>
-       Quices 30%
-      </li>
-     </ul>
-    </div>
-    <hr/>
-    <ul>
-     <li>
-      El parcial es en parejas
-     </li>
-    </ul>
-   </div>
-   <div style="text-align:center;">
-    <h3 id="Meta">
-     Meta
-    </h3>
-    <h1 id="Materia">Materia</h1>
-    <p>
-        <strong>Profesor: </strong> Claudia patricia Santiago cely
-    </p>
-    <p>
-        <strong>Correo:</strong> claudia.santiago@escuelaing.edu.co
-    </p>
-    <p>
-     Quiero... para poder... cuando
-    </p>
-   </div>
-  </div>
-  <iframe frameborder="0" src="./OTROS/Taller1.pdf" style="width:100%; height: 1000px">
-  </iframe>
-  <iframe frameborder="0" src="./OTROS/Resumen capa aplicación.pdf" style="width:100%; height: 1000px">
-  </iframe>
  </body>
 </html>
