--- a/RECO/A.html
+++ b/RECO/A.html
@@ -50,7 +50,7 @@
    Se expresa en digitos hexadecimales
   </p>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id1">
    <p class="ask">
     El "
    </p>
