--- a/RECO/Capa-de-red.html
+++ b/RECO/Capa-de-red.html
@@ -29,7 +29,7 @@
   </p>
   <br/>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id1">
    <p class="ask">
     Circuitos virtuales
    </p>
@@ -41,7 +41,7 @@
   <br/>
   <br/>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id2">
    <p class="ask">
     Datagramas
    </p>
@@ -61,7 +61,7 @@
    Entrada de datos. Aqui hace data link processing
   </p>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id3">
    <p class="ask">
     Transferencia de datos (Forwarding)
    </p>
@@ -76,13 +76,13 @@
   <br/>
   <br/>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id4">
    <p class="ask">
     Fragmentacion
    </p>
    <hr/>
    <div class="rta">
-    Fraccionar un paquete en pedazos pequeños. Inserte imagen de fragmentacion here
+    Fraccionar un paquete en pedazos pequeAos. Inserte imagen de fragmentacion here
    </div>
   </div>
   <p>
@@ -100,13 +100,13 @@
   </p>
   <p>
   </p>
-  <div class="cornell">
+  <div class="cornell" id="id5">
    <p class="ask">
     Best effort services
    </p>
    <hr/>
    <div class="rta">
-    "No garantiza nada, pero intentará hacerlo lo mejor posible"
+    "No garantiza nada, pero intentarA hacerlo lo mejor posible"
    </div>
   </div>
   <br/>
@@ -120,7 +120,7 @@
   <p>
    Direccionamiento
   </p>
-  <div class="cornell">
+  <div class="cornell" id="id6">
    <p class="ask">
     ICANN
    </p>
@@ -140,7 +140,7 @@
   <p>
    RFC 6761
   </p>
-  <div class="cornell">
+  <div class="cornell" id="id7">
    <p class="ask">
     CLASSFULL
    </p>
@@ -158,7 +158,7 @@
   <p>
    Son las IP de clase A (10.x.y.z), B (172.16.x.z  - 172.31.y.w) y C (192.168.y.z)^(REVISAR clase C)
   </p>
-  <div class="cornell">
+  <div class="cornell" id="id8">
    <p class="ask">
     Tambien existen MACS publicas? Porque en capa de enlace se envia en el header una MAC
    </p>
@@ -205,19 +205,19 @@
   </p>
   <br/>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id9">
    <p class="ask">
     Si los numeros resultantes son iguales, el paquete va dentro de la red. Else
    </p>
    <hr/>
    <div class="rta">
-    Lo envía al Gateway
+    Lo envAa al Gateway
    </div>
   </div>
   <p>
   </p>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id10">
    <p class="ask">
     Loopback
    </p>
@@ -231,11 +231,11 @@
   <br/>
   <br/>
   <p>
-   Software encargado de decidir por donde saldrá un paquete de entrada. Puede ser estático o dinámico
+   Software encargado de decidir por donde saldrA un paquete de entrada. Puede ser estAtico o dinAmico
   </p>
   <br/>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id11">
    <p class="ask">
     Aprende por los vecinos
    </p>
@@ -244,7 +244,7 @@
     Cada uno le pasa su tabla de enrutamiento sin la pata, y a partir de ella calcula la tabla
    </div>
   </div>
-  <div class="cornell">
+  <div class="cornell" id="id12">
    <p class="ask">
     NOTA
    </p>
