--- a/RECO/Caracteristicas-de-los-switches.html
+++ b/RECO/Caracteristicas-de-los-switches.html
@@ -19,16 +19,16 @@
    Caracteristicas de los switches
   </h1>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id1">
    <p class="ask">
     - Autonegicacion
    </p>
    <hr/>
    <div class="rta">
-    Negociar la velocidad de envío
+    Negociar la velocidad de envAo
    </div>
   </div>
-  <div class="cornell">
+  <div class="cornell" id="id2">
    <p class="ask">
     - Manejo de filtros
    </p>
@@ -47,16 +47,16 @@
    - No existe en las inalambricas
   </p>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id3">
    <p class="ask">
     - Transmision boroadcast
    </p>
    <hr/>
    <div class="rta">
-    como funciona una topología BUS
+    como funciona una topologAa BUS
    </div>
   </div>
-  <div class="cornell">
+  <div class="cornell" id="id4">
    <p class="ask">
     - Trafico broadcast
    </p>
@@ -65,7 +65,7 @@
     Conjunto de frames enviados a la broadcast address
    </div>
   </div>
-  <div class="cornell">
+  <div class="cornell" id="id5">
    <p class="ask">
     - Dominio Broadcast
    </p>
@@ -74,7 +74,7 @@
     A quien le llega un mensaje dirigido a una red
    </div>
   </div>
-  <div class="cornell">
+  <div class="cornell" id="id6">
    <p class="ask">
     - Dominio de colision
    </p>
@@ -101,12 +101,12 @@
   <br/>
   <br/>
   <p>
-   Se pueden agrupar los grupos o usuarios con un sol ow¿switch o switches conectados
+   Se pueden agrupar los grupos o usuarios con un sol owAswitch o switches conectados
   </p>
   <br/>
   <br/>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id7">
    <p class="ask">
     Agrega un tag
    </p>
@@ -119,7 +119,7 @@
    //Dir Dst Mac  |  Src MAC |  Type (0x8100) (2bytes) | Prioridad (3 bits) | CFI (1 bit) | VID (12 Bits) |  Length data | FCS
   </p>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id8">
    <p class="ask">
     2 modos
    </p>
@@ -129,13 +129,13 @@
    </div>
   </div>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id9">
    <p class="ask">
     Access point
    </p>
    <hr/>
    <div class="rta">
-    está en la mitad de la capa fisica y la de enlace. Solo retransmite señales
+    estA en la mitad de la capa fisica y la de enlace. Solo retransmite seAales
    </div>
   </div>
   <br/>
@@ -149,7 +149,7 @@
   </p>
   <p>
   </p>
-  <div class="cornell">
+  <div class="cornell" id="id10">
    <p class="ask">
     Router capa 3
    </p>
@@ -161,13 +161,13 @@
   <p>
    Los hubs no cambian de red. Asi que todos los que se interconectan a el cuentan como un solo dominio de colision
   </p>
-  <div class="cornell">
+  <div class="cornell" id="id11">
    <p class="ask">
     repetidores
    </p>
    <hr/>
    <div class="rta">
-    son access points, dependiendo donde esté peude hacer parte de las redes alambricas o inalambricas. No afectan a los dominios de colision
+    son access points, dependiendo donde estA peude hacer parte de las redes alambricas o inalambricas. No afectan a los dominios de colision
    </div>
   </div>
   <p>
@@ -177,9 +177,9 @@
   </p>
   <br/>
   <p>
-   yo quiero entrar al medio en una red wifi (que usa CSMA/CA), No puedo saber s iel router está hablando con otro
+   yo quiero entrar al medio en una red wifi (que usa CSMA/CA), No puedo saber s iel router estA hablando con otro
   </p>
-  <div class="cornell">
+  <div class="cornell" id="id12">
    <p class="ask">
     SSID
    </p>
@@ -189,17 +189,17 @@
    </div>
   </div>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id13">
    <p class="ask">
     Beacon frame
    </p>
    <hr/>
    <div class="rta">
-    Mensaje que envía la estación base que indica que tales redes son existentes
+    Mensaje que envAa la estaciAn base que indica que tales redes son existentes
    </div>
   </div>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id14">
    <p class="ask">
     RTC
    </p>
@@ -209,7 +209,7 @@
    </div>
   </div>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id15">
    <p class="ask">
     CTC
    </p>
@@ -222,7 +222,7 @@
   </p>
   <br/>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id16">
    <p class="ask">
     Pasivo
    </p>
@@ -231,17 +231,17 @@
     el cliente no hace nada
    </div>
   </div>
-  <div class="cornell">
+  <div class="cornell" id="id17">
    <p class="ask">
     Activo
    </p>
    <hr/>
    <div class="rta">
-    El pc le da la información a la estación base (router o AP)
+    El pc le da la informaciAn a la estaciAn base (router o AP)
    </div>
   </div>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id18">
    <p class="ask">
     Authentication
    </p>
@@ -251,7 +251,7 @@
    </div>
   </div>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id19">
    <p class="ask">
     Association
    </p>
@@ -266,7 +266,7 @@
   <br/>
   <br/>
   <br/>
-  <div class="cornell">
+  <div class="cornell" id="id20">
    <p class="ask">
     Varias piconets
    </p>
