--- a/ESTADISTICA/example.html
+++ b/ESTADISTICA/example.html
@@ -15,6 +15,7 @@
         <p>Texto <em>italico</em>, <strong>negrita</strong>, <del>tachadas</del> ó <code>reservadas</code> y
             <a href="#codigo">Enlaces</a>
         </p>
+		<iframe width="402" height="346" frameborder="0" scrolling="no" src="https://pruebacorreoescuelaingeduco-my.sharepoint.com/:x:/g/personal/juan_fonseca-c_mail_escuelaing_edu_co/EcnXLWUm3zVChCQxnWrAA4wB_KSgNRvCj67FgoEq3s78EA?e=XD6g7n&action=embedview"></iframe>
         <p>Al escribir plantilla se generará el codigo base</p>
 
         <div class="cornell">
