--- a/RECO/A.html
+++ b/RECO/A.html
@@ -50,7 +50,7 @@
    Se expresa en digitos hexadecimales
   </p>
   <br/>
-  <div class="cornell" id="id1">
+  <div class="cornell">
    <p class="ask">
     El "
    </p>
@@ -71,6 +71,15 @@
   </p>
   <br/>
   <br/>
+  <p>
+   |   a   | b    |    c |
+  </p>
+  <p>
+   |   a   |      |    a |
+  </p>
+  <p>
+   |       | klf  |    h |
+  </p>
   <br/>
  </body>
 </html>
