--- a/ARSW/index.html
+++ b/ARSW/index.html
@@ -10,56 +10,103 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
  </head>
  <body>
-    <h1 id="Materia">Materia</h1>
-    <p>
-        <strong>Profesor: </strong> Ivan toquica
-    </p>
-    <p>
-        <strong>Correo:</strong> @escuelaing.edu.co
-    </p>
-    <p>
-        <strong>Ciclo:</strong> 2022-2
-    </p>
-
-
-
-    <a href="preguntas.html"> Preguntas</a>
-    <div class="wrapper menu">
-        <a href="example.html">
-         example.html
-        </a>
-       </div>
-
-
-    <div class="info"> 
-        <div>
-            <h3>Calificaciones</h3>
-            <div class="calificaciones">
-                <ul>
-                    <li>Quiz 10%</li>
-                    <li>Propuesta proyecto 10%</li>
-                    <li>Labs 30%</li>
-                    <li>parcial 50%</li>
-                </ul>
-                <ul>
-                    <li>Quiz 10%</li>
-                    <li>proyecto  30%</li>
-                    <li>Labs 10%</li>
-                    <li>parcial 50%</li>
-                </ul>            
-            </div>
-            <hr>
-            <ul>
-                <li>El parcial es en parejas</li>
-            </ul>
-        </div>
-        <div style="text-align:center;">
-            <h3 id="Meta">Meta</h3>
-            <p>Quiero... para poder... cuando</p>
-        </div>
+  <h1 id="Materia">
+   Materia
+  </h1>
+  <p>
+   <strong>
+    Profesor:
+   </strong>
+   Ivan toquica
+  </p>
+  <p>
+   <strong>
+    Correo:
+   </strong>
+   @escuelaing.edu.co
+  </p>
+  <p>
+   <strong>
+    Ciclo:
+   </strong>
+   2022-2
+  </p>
+  <a href="preguntas.html">
+   Preguntas
+  </a>
+  <div class="wrapper menu">
+   <a href="API.html">
+    API.html
+   </a>
+   <a href="concurrencia.html">
+    concurrencia.html
+   </a>
+   <a href="conectors-components.html">
+    conectors-components.html
+   </a>
+   <a href="general.html">
+    general.html
+   </a>
+   <a href="preguntas.html">
+    preguntas.html
+   </a>
+   <a href="proyecto.html">
+    proyecto.html
+   </a>
+   <a href="threads.html">
+    threads.html
+   </a>
+  </div>
+  <div class="info">
+   <div>
+    <h3>
+     Calificaciones
+    </h3>
+    <div class="calificaciones">
+     <ul>
+      <li>
+       Quiz 10%
+      </li>
+      <li>
+       Propuesta proyecto 10%
+      </li>
+      <li>
+       Labs 30%
+      </li>
+      <li>
+       parcial 50%
+      </li>
+     </ul>
+     <ul>
+      <li>
+       Quiz 10%
+      </li>
+      <li>
+       proyecto  30%
+      </li>
+      <li>
+       Labs 10%
+      </li>
+      <li>
+       parcial 50%
+      </li>
+     </ul>
     </div>
-
-
-
+    <hr/>
+    <ul>
+     <li>
+      El parcial es en parejas
+     </li>
+    </ul>
+   </div>
+   <div style="text-align:center;">
+    <h3 id="Meta">
+     Meta
+    </h3>
+    <p>
+     Quiero... para poder... cuando
+    </p>
+   </div>
+  </div>
  </body>
 </html>
