--- a/index.html
+++ b/index.html
@@ -1,41 +1,37 @@
 <html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   Document
-  </title>
-  <link href="index.css" id="style" media="screen" rel="stylesheet" type="text/css"/>
- </head>
- <body>
-  <div class="wrapper menu">
-    <a href="CNYT/index.html">
-        CNYT
-       </a>
-       <a href="CVDS/index.html">
-        CVDS
-       </a>   <a href="ECDI/index.html">
-        ECDI
-       </a> 
-    </a>   <a href="RECO/index.html">
-        RECO
-       </a>
-         <a href="EGI3/index.html">
-        EGI3
 
-   <a href="TEMPLATE/index.html">
-    TEMPLATE
-   </a>
-   <a href="test/index.html">
-    test
-   </a>
-   
-   <!-- <iframe src="https://pruebacorreoescuelaingeduco-my.sharepoint.com/:x:/g/personal/juan_fonseca-c_mail_escuelaing_edu_co/EZf2G72yoGJEuUH6zDwyOecBVNCJZISkrZxXKFJ0wiIaOQ?e=nkeqYZ"></iframe> -->
-   
-   
-  
+<head>
+  <meta charset="utf-8" />
+  <meta content="IE=edge" http-equiv="X-UA-Compatible" />
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <title>
+    Document
+  </title>
+  <link href="index.css" id="style" media="screen" rel="stylesheet" type="text/css" />
+</head>
+<body>
+  <div class="wrapper menu">
+    <a href="ARSW/index.html">
+      ARSW
+    </a>
+    <a href="FINANZAS/index.html">
+      FINANZAS
+    </a> <a href="ESTADISTICA/index.html">
+      ESTADISTICA
+    </a>
+    </a> <a href="DATA-SCIENCE/index.html">
+      DATA-SCIENCE
+    </a>
+    <a href="PROGRAMACION/index.html">
+      PROGRAMACION
+    </a>
+    <a href="MLEA/index.html">
+      Machine Learning
+    </a>
+    <a href="LIBROS/index.html">
+      LIBROS
+    </a>
   </div>
-  <!-- <iframe src="./PRAV/OTROS/Seductor+de+0+a+100.pdf"></iframe> -->
- </body>
+</body>
+
 </html>
