--- a/ARSW/preguntas.html
+++ b/ARSW/preguntas.html
@@ -1,14 +1,1 @@
-<html lang="es">
-    <head>
-        <meta charset="UTF-8"/>
-        <link id="style" rel="stylesheet" href="./../estilos/oscuro.css" />
-<script src="./../main.js"></script>
-    </head>
-    <body>
-        <div class="setter">
-            <button onclick="setStyles()">Cambiar</button>
-        </div>
-        <h1>Preguntas</h1>
-    </body>
-</html>
-<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?skin=desert" defer=""/>
+<html lang="es">	<head>		<meta charset="UTF-8"/>		<link id="style" rel="stylesheet" href="./../estilos/oscuro.css" /><script src="./../main.js"></script><script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script><script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>	</head>	<body>		<div class="setter">			<button onclick="setStyles()">Cambiar</button>		</div><br/><br/><p>Cuantos recursos requiere un hilo para ser instanciado?</p><br/><p>Es verdad que usar un break en un for puede traer problemas?</p><br/><p>Las variables de session cuentan como caché?</p><br/><br/><br/><div class="tema2"><h2>personal</h2><br/><p>Que son linterns? </p><br/><p>Soner </p><br/></div>	</body></html><script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?skin=desert"></script>
